terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
     Name = "three-tier-vpc"
  }
   
  }
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "three-tier-igw"
  }
}
resource "aws_subnet" "public_subnet_1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.0.0/28"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-1a"
  }
}
resource "aws_subnet" "public_subnet_2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/28"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-1b"
  }
}
resource "aws_subnet" "app_subnet_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/28"
  availability_zone = "us-east-1a"
  tags = {
    Name = "app-subnet-1a"
  }
}
resource "aws_subnet" "app_subnet_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.3.0/28"
  availability_zone = "us-east-1b"
  tags = {
    Name = "app-subnet-1b"
  }
}
resource "aws_subnet" "db_subnet_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.4.0/28"
  availability_zone = "us-east-1a"
  tags = {
    Name = "db-subnet-1a"
  }
}

resource "aws_subnet" "dbnew_subnet_1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.6.0/28"
  availability_zone = "us-east-1a"
  tags = {
    Name = "dbnew-subnet-1a"
  }
}

resource "aws_subnet" "db_subnet_2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.5.0/28"
  availability_zone = "us-east-1b"
  tags = {
    Name = "db-subnet-1b"
  }
}
#adding elastic ip for nat gateway
resource "aws_eip" "nat_eip" {

  vpc = "true"
  tags = {
    name = "NAT-EIP"
  }
}
#NAT gateway in public subnet 1a
resource "aws_nat_gateway" "nat_gw" {
 allocation_id = aws_eip.nat_eip.id
subnet_id = aws_subnet.app_subnet_1.id
tags = {
  name = "NAT-gw"
} 
}
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    name = "public-rt"
  }  
}

# Associate public subnets with public route table
resource "aws_route_table_association" "public_1_assoc" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_rt.id
}
resource "aws_route_table_association" "public_2_assoc" {
  subnet_id      = aws_subnet.public_subnet_2.id
  route_table_id = aws_route_table.public_rt.id
}
# Route table for private subnets (to use NAT GW)
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gw.id
  }
  tags = {
    Name = "private-rt"
  }
}
# Associate private subnets with private route table
resource "aws_route_table_association" "private_1_assoc" {
  subnet_id      = aws_subnet.app_subnet_1.id
  route_table_id = aws_route_table.private_rt.id
}
resource "aws_route_table_association" "private_2_assoc" {
  subnet_id      = aws_subnet.app_subnet_2.id
  route_table_id = aws_route_table.private_rt.id
}
resource "aws_route_table_association" "private_3_assoc" {
  subnet_id      = aws_subnet.db_subnet_1.id
  route_table_id = aws_route_table.private_rt.id
}
resource "aws_route_table_association" "private_4_assoc" {
  subnet_id      = aws_subnet.db_subnet_2.id
  route_table_id = aws_route_table.private_rt.id
}
resource "aws_security_group" "bastion_sg" {
  name        = "bastion-sg"
  description = "Allow SSH access"
  vpc_id      = aws_vpc.main.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["103.117.236.53/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "bastion-sg"
  }
}
# resource "aws_instance" "bastion" {
#   ami                    = "ami-0e449927258d45bc4" 
#   instance_type          = "t2.micro"
#   subnet_id              = aws_subnet.public_subnet_1.id
#   vpc_security_group_ids = [aws_security_group.bastion_sg.id]
#   key_name               = "redhat"  
#   tags = {
#     Name = "Bastion-Host"
#   }
# }
resource "aws_security_group" "app_sg" {
  name   = "app-sg"
  vpc_id = aws_vpc.main.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "app-sg"
  }
}
# Security group for ALB
resource "aws_security_group" "alb_sg" {
  name   = "alb-sg"
  vpc_id = aws_vpc.main.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "alb-sg"
  }
}
resource "aws_launch_template" "app_lt" {
  name_prefix   = "app-lt"
  image_id      = "ami-0e449927258d45bc4" 
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.app_sg.id]
  key_name               = "redhat"  
  user_data = base64encode(<<EOF
#!/bin/bash
yum update -y
yum install -y httpd
echo "Hello from \$(hostname)" > /var/www/html/index.html
systemctl start httpd
systemctl enable httpd
EOF
  )
}
# Target Group
resource "aws_lb_target_group" "app_tg" {
  name     = "app-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
  health_check {
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200"
  }
}
# Application Load Balancer
resource "aws_lb" "app_alb" {
  name               = "app-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.public_subnet_1.id, aws_subnet.public_subnet_2.id]
  tags = {
    Name = "app-alb"
  }
}
# Listener for ALB
resource "aws_lb_listener" "app_listener" {
  load_balancer_arn = aws_lb.app_alb.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app_tg.arn
  }
}

resource "aws_dynamodb_table" "terraform_locks" {
  name           = "terraform-locks"
  billing_mode   = "PAY_PER_REQUEST"
  hash_key       = "LockID"

  attribute {
    name = "LockID"
    type = "S"
  }

  tags = {
    Environment = "dev"
    Name        = "Terraform Lock Table"
  }
}

# # Auto Scaling Group
# resource "aws_autoscaling_group" "app_asg" {
#   name                      = "app-asg"
#   desired_capacity          = 1
#   max_size                  = 1
#   min_size                  = 1
#   vpc_zone_identifier       = [aws_subnet.app_subnet_1.id, aws_subnet.app_subnet_2.id]
#   launch_template {
#     id      = aws_launch_template.app_lt.id
#     version = "$Latest"
#   }
#   target_group_arns = [aws_lb_target_group.app_tg.arn]
#   tag {
#     key                 = "Name"
#     value               = "AppInstance"
#     propagate_at_launch = true
#   }
# }

# resource "aws_instance" "app_instance" {
#   ami                    = "ami-0e449927258d45bc4"
#   instance_type          = "t2.micro"
#   subnet_id              = aws_subnet.app_subnet_1.id
#   vpc_security_group_ids = [aws_security_group.app_sg.id]
#   key_name               = "redhat"
#   user_data = base64encode(<<EOF
# #!/bin/bash
# yum update -y
# yum install -y httpd
# echo "Hello from \$(hostname)" > /var/www/html/index.html
# systemctl start httpd
# systemctl enable httpd
# EOF
#   )
#   tags = {
#     Name = "AppInstance"
#   }
# }

# resource "aws_lb_target_group_attachment" "app_instance_attachment" {
#   target_group_arn = aws_lb_target_group.app_tg.arn
#   target_id        = aws_instance.app_instance.id
#   port             = 80
# }
